--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -135,9 +135,9 @@
                             <nav>
                                 <ul>
                                     <li><a href="/">Home</a></li>
-                                    <li><a href="page-about.html">About</a></li>
+                                    <li><a href="/aboutUs">About</a></li>
                                     <li><a href="/shop">Shop</a></li>
-                                    <li><a href="page-contact.html">Contact</a></li>
+                                    <li><a href="/contactUs">Contact</a></li>
                                 </ul>
                             </nav>
                         </div>
