edited home page

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -94,42 +94,48 @@
                     <div class="carausel-6-columns" id="carausel-6-columns">
                         <div class="card-1">
                             <figure class=" img-hover-scale overflow-hidden">
-                                <a href="products-grid-right.html"><img
+                                <!-- <a href="products-grid-right.html"> -->
+                                    <img
                                         src="user-assets/imgs/category/category-gaming.webp" alt=""></a>
                             </figure>
                             <!-- <h5><a href="products-grid-right.html">T-Shirt</a></h5> -->
                         </div>
                         <div class="card-1">
                             <figure class=" img-hover-scale overflow-hidden">
-                                <a href="products-grid-right.html"> <img
+                                <!-- <a href="products-grid-right.html"> -->
+                                     <img
                                         src="user-assets/imgs/category/category-contentCreation.webp" alt=""></a>
                             </figure>
                             <!-- <h5><a href="products-grid-right.html">Bags</a></h5> -->
                         </div>
                         <div class="card-1">
                             <figure class=" img-hover-scale overflow-hidden">
-                                <a href="products-grid-right.html"><img
+                                <!-- <a href="products-grid-right.html"> -->
+                                    <img
                                         src="user-assets/imgs/category/category-entertainment.webp" alt=""></a>
                             </figure>
                             <!-- <h5><a href="products-grid-right.html">Sandan</a></h5> -->
                         </div>
                         <div class="card-1">
                             <figure class=" img-hover-scale overflow-hidden">
-                                <a href="products-grid-right.html"><img
+                                <!-- <a href="products-grid-right.html"> -->
+                                    <img
                                         src="user-assets/imgs/category/category-everydayUse.webp" alt=""></a>
                             </figure>
                             <!-- <h5><a href="products-grid-right.html">Scarf Cap</a></h5> -->
                         </div>
                         <div class="card-1">
                             <figure class=" img-hover-scale overflow-hidden">
-                                <a href="products-grid-right.html"><img
+                                <!-- <a href="products-grid-right.html"> -->
+                                    <img
                                         src="user-assets/imgs/category/category-officeUse.webp" alt=""></a>
                             </figure>
                             <!-- <h5><a href="products-grid-right.html">Shoes</a></h5> -->
                         </div>
                         <div class="card-1">
                             <figure class=" img-hover-scale overflow-hidden">
-                                <a href="products-grid-right.html"><img
+                                <!-- <a href="products-grid-right.html"> -->
+                                    <img
                                         src="user-assets/imgs/category/category-studies.webp" alt=""></a>
                             </figure>
                             <!-- <h5><a href="products-grid-right.html">Pillowcase</a></h5> -->
