--- a/views/admin/order-details-admin.ejs
+++ b/views/admin/order-details-admin.ejs
@@ -39,8 +39,8 @@
                                     
 
                                     <div class="row">
-                                   <div class="col-2 ">
-                                    <a href="/invoice?id=<%= orders._id %>"><button  class="btn btn-primary">Invoice</button></a>
+                                   <div class="col-2 ">  
+                                    <!-- <a href="/invoice?id=<%= orders._id %>"><button  class="btn btn-primary">Invoice</button></a> -->
                                         </div>
                                         <div class="col-5" style="margin-top: 10px; margin-left: 50px;">
 
